Fix gap on right side of nav toggle button on Safari
Caused by margin.

--- a/styles/Navigation.module.scss
+++ b/styles/Navigation.module.scss
@@ -12,6 +12,7 @@
         align-self: flex-end;
         width: fit-content;
         background-color: $color-red;
+        margin: 0;
         padding: 8px;
         border: none;
         border-radius: 5px 0 0 5px;
